utils/Kubernetes/development/infrastructure/nfs-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: omaml
  name: nfs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      role: nfs-server
  template:
    metadata:
      labels:
        role: nfs-server
    spec:
      containers:
        - name: nfs-server
          image: k8s.gcr.io/volume-nfs:0.8
          ports:
            - name: nfs
              containerPort: 2049
            - name: mountd
              containerPort: 20048
            - name: rpcbind
              containerPort: 111
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /exports
              name: mypvc
      volumes:
        - name: mypvc
          persistentVolumeClaim:
            claimName: nfs
