utils/Kubernetes/development/infrastructure/kub-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: kube-system
  annotations:
spec:
  tls:
  - hosts:
    - dashboard.oma-ml.ai
    secretName: dev-oma-ml-tls
  rules:
  - host: dashboard.oma-ml.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
